--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 1 * * *" # 每天凌晨1点运行
+    - cron: "0 8 * * 1" # 每周一上午八点运行
   workflow_dispatch:
     inputs:
       force_update:
